@@ -1,3 +1,7 @@
+2017-11-17  Robby Stephenson  <robby@periapsis.org>
+
+	* Fixed bug with multi-selection and entry editing (Bug 387053).
+
 2017-11-12  Robby Stephenson  <robby@periapsis.org>
 
 	* Fixed bug with incorrect entry titles in icon view and multiple entry icons (Bug 386548).
